fixe bug in demo task and clean code

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -26,15 +26,16 @@ arb:
       # index: "Activités"
       # new: "Nouvelle activité"
       # show: "%{name}"
-    backend/activity_repartitions:
-      # edit: "Modifier la répartion analytique\_: %{id} "
-      # index: "Répartitions analytiques"
-      # new: "Nouvelle répartition analytique"
-      # show: "Répartition %{id}"
+    backend/activity_repartitions: #?
     backend/activity_watchings: #?
     backend/affairs:
       # index: "Transactions"
       # select: "Ajouter une transaction"
+    backend/analytic_repartitions:
+      # edit: "Modifier la répartion analytique\_: %{id} "
+      # index: "Répartitions analytiques"
+      # new: "Nouvelle répartition analytique"
+      # show: "Répartition %{id}"
     backend/animal_groups:
       # edit: "Modifier le groupe d’animaux\_: %{name}"
       # index: "Groupes d’animaux"
@@ -68,7 +69,11 @@ arb:
       new: "الاشارة لكشف حساب جديد"
       point: "رقم اعداد البيان%{number} من %{cash}"
       show: "رقم كشف الحساب%{number}"
-    backend/building_divisions: #?
+    backend/building_divisions:
+      # edit: "Modifier la zone\_: %{name}"
+      # index: "Zones de bâtiments"
+      # new: "Ajout d'une zone"
+      # show: "Détail d'une zone\_: %{name}"
     backend/buildings:
       edit: "تعديل موقع التخزين"
       index: "مواقع التخزين"
@@ -688,8 +693,8 @@ arb:
     backend/accountancy: "المحاسبة" #?
     backend/accounts: "مخطط الحساب"
     # backend/activities: "Activités"
-    # backend/activity_repartitions: "Répartitions analytiques"
     # backend/affairs: "Affaires"
+    # backend/analytic_repartitions: "Répartitions analytiques"
     # backend/animals: "Animaux"
     backend/application: "تطبيق" #?
     backend/areas: "العناوين البريد"
@@ -2111,7 +2116,8 @@ arb:
       # all: "{number}. {name}"
     backend/activities:
       # all: "{name} ({family}/{nature})"
-    backend/activity_repartitions:
+    backend/activity_repartitions: #?
+    backend/analytic_repartitions:
       # all: "{id}"
     backend/animals:
       # all: "{name} - {work_number}"
