--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -8,12 +8,13 @@ eng:
         # nomen: "Code analytique"
         # parent: "Activité parente"
         # work_unit: "Unité d’œuvre"
-      activity_repartition:
+      activity_repartition: #?
+      activity_watching: #?
+      analytic_repartition:
         # affected_on: "Affecté le"
         # journal_entry_item: "Ligne comptable concernée"
         # product_nature: "Type de produit concerné"
         # repartition_percentage: "Pourcentage d’affectation"
-      activity_watching: #?
       animal:
         # born_at: "Date de naissance"
         # dead_at: "Date de décès"
@@ -409,6 +410,7 @@ eng:
       # activity: "Activité"
       # activity_repartition: "Répartition analytique"
       # affair: "Affaire"
+      # analytic_repartition: "Répartition analytique"
       animal: "Animal"
       animal_diagnostic: "Animal diagnostic" #?
       animal_disease: "Animal disease" #?
