--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -19,15 +19,16 @@ jpn:
       # index: "Activités"
       # new: "Nouvelle activité"
       # show: "%{name}"
-    backend/activity_repartitions:
-      # edit: "Modifier la répartion analytique\_: %{id} "
-      # index: "Répartitions analytiques"
-      # new: "Nouvelle répartition analytique"
-      # show: "Répartition %{id}"
+    backend/activity_repartitions: #?
     backend/activity_watchings: #?
     backend/affairs:
       # index: "Transactions"
       # select: "Ajouter une transaction"
+    backend/analytic_repartitions:
+      # edit: "Modifier la répartion analytique\_: %{id} "
+      # index: "Répartitions analytiques"
+      # new: "Nouvelle répartition analytique"
+      # show: "Répartition %{id}"
     backend/animal_groups:
       # edit: "Modifier le groupe d’animaux\_: %{name}"
       # index: "Groupes d’animaux"
@@ -61,7 +62,11 @@ jpn:
       # new: "Pointer un nouveau relevé de compte"
       # point: "Pointer le relevé N°%{number}"
       # show: "Relevé de compte N°%{number}"
-    backend/building_divisions: #?
+    backend/building_divisions:
+      # edit: "Modifier la zone\_: %{name}"
+      # index: "Zones de bâtiments"
+      # new: "Ajout d'une zone"
+      # show: "Détail d'une zone\_: %{name}"
     backend/buildings:
       # edit: "Modifier un bâtiment"
       # index: "Bâtiments"
@@ -535,8 +540,8 @@ jpn:
     # backend/account_balances: "Soldes de comptes"
     # backend/accounts: "Plan de comptes"
     # backend/activities: "Activités"
-    # backend/activity_repartitions: "Répartitions analytiques"
     # backend/affairs: "Affaires"
+    # backend/analytic_repartitions: "Répartitions analytiques"
     # backend/animals: "Animaux"
     # backend/areas: "Zones postales"
     # backend/assets: "Immobilisations"
@@ -1762,7 +1767,8 @@ jpn:
       # all: "{number}. {name}"
     backend/activities:
       # all: "{name} ({family}/{nature})"
-    backend/activity_repartitions:
+    backend/activity_repartitions: #?
+    backend/analytic_repartitions:
       # all: "{id}"
     backend/animals:
       # all: "{name} - {work_number}"
