working on help ENG
in progress

--- a/config/locales/eng/help/animals-index.txt
+++ b/config/locales/eng/help/animals-index.txt
@@ -1,6 +1,6 @@
-====== Animaux ======
+====== Animals ======
 
-===== Liste des animaux =====
+===== Animal's list =====
 
 Ici, vous pouvez [[>backend/animals#new|créer]] , modifier et visualiser vos animaux.
 
