--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -22,6 +22,8 @@ jpn:
     backend/activity_repartitions: #?
     backend/activity_watchings: #?
     backend/affairs:
+      # attach: "Associer une transaction"
+      # detach: "Dissocier une transaction"
       # index: "Transactions"
       # select: "Ajouter une transaction"
     backend/analytic_repartitions:
@@ -139,7 +141,8 @@ jpn:
       # edit: "Modifier la zone administrative\_: %{name}"
       # index: "Zones administratives"
       # new: "Ajouter une zone administrative"
-    backend/document_archives: #?
+    backend/document_archives:
+      # show: "Voir l'archive\_: %{name} "
     backend/document_templates:
       # edit: "Modifier le modèle de document\_: %{name}"
       # index: "Modèles de document"
@@ -147,7 +150,9 @@ jpn:
       # new: "Création d’un modèle de document"
       # print: "Imprimer un exemple"
     backend/documents:
+      # edit: "Modifier le document"
       # index: "Gestion électronique des documents"
+      # new: "Nouveau document"
       # show: "Document\_: %{name}"
     backend/entities:
       # destroy: "Supprimer la fiche"
@@ -162,11 +167,13 @@ jpn:
     backend/entity_addresses:
       # edit: "Modifier une coordonnée"
       # new: "Ajouter une coordonnée"
+      # show: "Coordonnée"
     backend/entity_categories: #?
     backend/entity_link_natures: #?
     backend/entity_links:
       # edit: "Modifier le lien"
       # new: "Ajout d’un nouveau lien"
+      # show: "Lien"
     backend/entity_natures: #?
     backend/equipments:
       # edit: "Modifier l’équipement\_: %{name}"
@@ -190,6 +197,8 @@ jpn:
     backend/help: #?
     backend/helps:
       # index: "Aide"
+      # show: "Voir l'aide"
+      # toggle: "Basculer l'aide"
     backend/incidents:
       # edit: "Modifier l’incident\_: %{name} (%{nature})"
       # index: "Incidents"
@@ -200,7 +209,8 @@ jpn:
       # edit: "Modifier l’approvisionnement: %{number}"
       # index: "Approvisionnements"
       # new: "Enregistrer un nouvel approvisionnement"
-    backend/incoming_delivery_items: #?
+    backend/incoming_delivery_items:
+      # new: "Nouvel item"
     backend/incoming_delivery_modes:
       # edit: "Modifier le mode d’approvisionnement: %{name}"
       # index: "Modes d’approvisionnement"
@@ -289,7 +299,11 @@ jpn:
       # index: "Médicaments"
       # new: "Nouveau médicaments"
       # show: "Médicament\_: %{name}"
-    backend/meeting_natures: #?
+    backend/meeting_natures:
+      # edit: "Modifier le type d'évènement\_: %{name}"
+      # index: "Types d'évènement"
+      # new: "Créer un type d'évènement"
+      # show: "Type d'évènement\_: %{name}"
     backend/meetings:
       # edit: "Modifier un évènement"
       # index: "Évènements"
@@ -337,7 +351,11 @@ jpn:
       # index: "Décaissements"
       # new: "Ajout d’un décaissement"
       # show: "Décaissement n°%{number} pour %{payee}"
-    backend/people: #?
+    backend/people:
+      # edit: "Modifier la personne\_: %{name}"
+      # index: "Personnes"
+      # new: "Nouvelle personne"
+      # show: "Personne\_: %{name}"
     backend/places: #?
     backend/plant_medicines:
       # edit: "Modifier le produit phytosanitaire\_: %{name}"
